corrected error with images not showing

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,7 +50,6 @@
     display: flex;
     justify-content: flex-end;
     align-items:center;
-    background-image: url(/assets/images/anime-mashup-cut.jpg);
     background-size: cover;
     background-position: top center;
     background-repeat: no-repeat;
@@ -58,7 +57,6 @@
   }
 
   .hero-banner h2{
-
   }
 
   .page-section {
